--- a/FinPlan.Web/Components/Pages/Retire.razor
+++ b/FinPlan.Web/Components/Pages/Retire.razor
@@ -1452,7 +1452,7 @@
                                     @row.RothWithdrawal.ToString("C0")
                                 </td>
                                 <td class="text-end col-account-activity" style="font-size:0.78rem; background-color: rgba(37, 99, 235, 0.08); font-weight:600; text-align: right; font-variant-numeric: tabular-nums; color: #F56565;">
-                                    @row.TaxesPaid.ToString("C0")
+                                    @row.TaxesPaidOnGrowthAndIncome.ToString("C0")
                                 </td>
                             
                                 <td class="text-end col-ending-balances" style="font-size:0.78rem; background-color: rgba(107, 114, 128, 0.08); font-weight:600; text-align: right; font-variant-numeric: tabular-nums;">
