--- a/FinPlan.Web/Components/Pages/Retire.razor
+++ b/FinPlan.Web/Components/Pages/Retire.razor
@@ -1317,7 +1317,7 @@
                                 @if (showToolTipGrowth)
                                 {
                                     <div class="info-tooltip">
-                                        <strong>Growth Before Tax:</strong> Investment growth for the year, before subtracting the taxes
+                                        <strong>Growth:</strong>Interest, Dividend & Investment growth for the year, before subtracting the taxes
                                         <span class="float-end" style="cursor:pointer;" @onclick="() => showToolTipGrowth = false" title="Close">
                                             <span class="bi bi-x-lg"></span>
                                         </span>
