--- a/FinPlan.Web/Components/Pages/Retire.razor
+++ b/FinPlan.Web/Components/Pages/Retire.razor
@@ -1468,7 +1468,7 @@
 
                                     @row.TraditionalWithdrawalForCostOfLivingAndTaxes.ToString("C0")
                                 </td>
-                                <td class="text-end col-account-activity" style="font-size:0.78rem; backgForCostOfLivingAndTaxesround-color: rgba(37, 99, 235, 0.08); font-weight:600; text-align: right; font-variant-numeric: tabular-nums; border-right: 2px solid #d1d5db;">
+                                <td class="text-end col-account-activity" sForTaxPaymentIfAtAllForCostOfLivingAndTaxesround-color: rgba(37, 99, 235, 0.08); font-weight:600; text-align: right; font-variant-numeric: tabular-nums; border-right: 2px solid #d1d5db;">
                                     @row.RothWithdrawalForCostOfLivingAndTaxes.ToString("C0")
                                 </td>
                                 <td class="text-end col-account-activity" style="font-size:0.78rem; background-color: rgba(37, 99, 235, 0.08); font-weight:600; text-align: right; font-variant-numeric: tabular-nums; color: #F56565;">
