--- a/FinPlan.Web/Components/Pages/Retire.razor
+++ b/FinPlan.Web/Components/Pages/Retire.razor
@@ -1184,10 +1184,14 @@
                                     
                                     <th colspan="3" class="col-ending-balances" style="background-color: rgba(107,114,128,0.08); text-align: center;">Ending Balances</th>
 
-                                    <th style="background-color: #f8f9fa; border-right: 2px solid #d1d5db; text-align: center;">Total Withdrawn</th>
+                                    <th colspan="4" class="col-ending-balances" style="background-color: rgba(107,114,128,0.08); text-align: center;">Tax - Growth & Income</th>
+
+                                    <th colspan="3" class="col-ending-balances" style="background-color: rgba(107,114,128,0.08); text-align: center;">Traditional Withdrawal for Income Tax</th>
+
+                                    @* <th style="background-color: #f8f9fa; border-right: 2px solid #d1d5db; text-align: center;">Total Withdrawn</th>
                                     <th colspan="3" class="col-account-activity" style="background-color: rgba(37,99,235,0.08); border-right: 2px solid #d1d5db; text-align: center;">Withdrawals (Living)</th>
                                     <th colspan="6" class="col-account-activity" style="background-color: rgba(37,99,235,0.08); border-right: 2px solid #d1d5db; text-align: center;">Withdrawals (Taxes)</th>
-                                    <th style="background-color: rgba(37,99,235,0.08); color: #F56565; border-right: 2px solid #d1d5db; text-align: center;">Taxes</th>
+                                    <th style="background-color: rgba(37,99,235,0.08); color: #F56565; border-right: 2px solid #d1d5db; text-align: center;">Taxes</th> *@
                                 </tr>
                                 <!-- Second Row: Specific Columns with separators and tooltips -->
                                 <tr>
@@ -1361,7 +1365,7 @@
                                             </div>
                                         }
                                     </th>
-                                    
+
                                     <th>
                                         <span class="bi bi-info-circle info-icon" @onclick="() => showToolTipRothEnding = !showToolTipRothEnding" tabindex="0" title="Click for more info"></span>
                                         Roth
@@ -1421,7 +1425,7 @@
                                     </th>
                                     <th style="border-right: 2px solid #d1d5db;">
                                         <span class="bi bi-info-circle info-icon" @onclick="() => showToolTipTaxPaid = !showToolTipTaxPaid" tabindex="0" title="Click for more info"></span>
-                                        Tax Due (Traditional)
+                                        Tax Due
                                         @if (showToolTipTaxPaid)
                                         {
                                             <div class="info-tooltip">
@@ -1432,7 +1436,7 @@
                                     </th>
                                     <th style="border-right: 2px solid #d1d5db;">
                                         <span class="bi bi-info-circle info-icon" @onclick="() => showToolTipTaxPaid = !showToolTipTaxPaid" tabindex="0" title="Click for more info"></span>
-                                        Traditional (Traditional Tax)
+                                        Tax Paid (Traditional)
                                         @if (showToolTipTaxPaid)
                                         {
                                             <div class="info-tooltip">
@@ -1443,7 +1447,7 @@
                                     </th>
                                     <th style="border-right: 2px solid #d1d5db;">
                                         <span class="bi bi-info-circle info-icon" @onclick="() => showToolTipTaxPaid = !showToolTipTaxPaid" tabindex="0" title="Click for more info"></span>
-                                        Roth (Traditional Tax)
+                                        Tax Paid (Roth)
                                         @if (showToolTipTaxPaid)
                                         {
                                             <div class="info-tooltip">
@@ -1527,6 +1531,7 @@
                                         <td class="text-end col-account-activity" style="font-size:0.78rem; background-color: rgba(37, 99, 235, 0.08); font-weight:600; text-align: right; font-variant-numeric: tabular-nums;">
                                             @row.RothWithdrawForInitialTaxPaymentOnTaxableIncome.ToString("C0")
                                         </td>
+
 
                                         <td class="text-end col-account-activity" style="font-size:0.78rem; background-color: rgba(37, 99, 235, 0.08); font-weight:600; text-align: right; font-variant-numeric: tabular-nums;">
                                             @row.TaxDueDueToTraditionalWithdrawnForTaxOnTraditional.ToString("C0")
